# bookmark-capture

./: README.md  containers.py  main.py  pyproject.toml
.github/workflows/: static.yml
repository/: base_pocket.py  booru_pocket.py  fdv_pocket.py  kmn_pocket.py  ngk_pocket.py  nitter_pocket.py  pcloud.py  pocket.py  twitter_pocket.py
repository/interface/: bookmark.py  storage.py
usecase/: booru_image_downloader.py  fdv_image_downloader.py  kmn_image_downloader.py  ngk_image_downloader.py  nitter_image_downloader.py  twitter_image_downloader.py
usecase/interface/: image_downloader.py
