[tool.poetry]
name = "bookmark-capture"
version = "0.1.0"
description = ""
authors = ["noreyb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.41.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
